2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::InputResult): Remove structure.
	(Database::addResults): Change results argument to be a map from
	a CompilerID + metric name to a value.
	* lib/Database.cpp (Database::addResults): Change results argument to
	be a map from a CompilerID + metric name to a value.
	* lib/Driver.cpp (parseResults): Avoid adding duplicate results
	to the database. Instead warn the user of the offending compilation
	id.

2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* script/feature-extract.py: Fix argument parsing.
	* script/generate-builds.py: Likewise.
	* script/measure-code-size.py: Added script to measure the
	size of executables in a directory.

2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* script/build-and-measure.py: Deleted file.
	* script/feature_extract.py: Rewritten, renamed to feature-extract.py
	* script/feature-extract.py: Added file.
	* script/generate-build.py: Rewritten, renamed to generate-builds.py
	* script/generate-builds.py: Added file.
	* script/mageec_common.py: Renamed to mageec.py. Added
	feature extraction functionality.
	* script/mageec.py: Added file.
	* script/measure-code-size.py: Deleted file.

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* script/feature_extract.py: Added file.
	* script/generate-build.py: Remove feature_extract function.
	* script/mageec_common.py: Renamed to mageec.py.
	* script/mageec.py: Renamed from mageec_common.py, added
	feature_extract function from generate-build.py

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* script/generate-build.py: Factor out code into mageec_common.py
	* script/mageec_common.py: Added file.

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* script/generate-build.py: Update to reflect changes to the framework.

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h: Remove use of UUID, use strings instead.
	* include/mageec/Framework.h: Likewise.